  are installed with a vimball. Local installation is done using the Python
  user scheme instead of the home scheme. pdb-clone is installed separately
  from PyPI.

* The pyclewn program is now started with the command ``python -m clewn``
  followed by the options and an optional argument that selects which debugger
  to run.

* ``CTRL-E`` is a standard Vim command, it is replaced with ``CTRL-K`` in
  pyclewn key mappings for clearing breakpoints. The ``(clewn)_console`` is
  not any more popped up after hitting a pyclewn mapped key.

* The watched variables clewn buffer is now named ``(clewn)_variables`` and
  the installed Vim syntax file has been renamed from ``dbgvar.vim`` to
  ``clewn_variables.vim``.

Bug fixes
^^^^^^^^^

* When pyclewn is started from a terminal, the controlling terminal of the gdb
  inferior process is now correctly set to the terminal from where pyclewn has
  been started.

* The terminal spawned by the ``inferiortty`` command is now automatically
  closed at the end of each debugging session.

* Fix a gdb version parsing error on the non-conformant Cygwin versions of
  gdb. See the bug report at
  http://cygwin.com/ml/cygwin/2014-06/msg00211.html.

* Fix the problem that changes made to the plugin global variables after the
  first invocation of ``:Pyclewn`` are ignored.

* Pyclewn listens on '127.0.0.1' and each debugger type uses now a different
  netbeans port number.

* Pyclewn prevents now the spawning of a terminal by ``Cinferiortty`` also
  when the inferior is stopped in a shared library.

* Fix the problem that when the first command is 'Cbreak', the breakpoint is
  not highlighted.

Pyclewn 1.11
------------

.. September 10, 2013

Bug fix
^^^^^^^

* Fix gdb version detection on linux Suse 12.2 and Fedora 19 that print a gdb
  header not GNU standards compliant.

Pyclewn 1.10
------------

.. February 7, 2013

New features
^^^^^^^^^^^^

* Use now pdb-clone_ instead of the standard library Python debugger, pdb_.
